# Unreal-KarLib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  main.yml
amxmodx/scripting/: karlab_test.sma  run_fastdl.sma
amxmodx/scripting/include/: karlab.inc
src/: amxxmodule.cpp  amxxmodule.h  header.h  interface.h  k_rehlds_api.h  karlab_natives.cpp  moduleconfig.h  quicktrace.cpp  quicktrace.h  rehlds_api.cpp
src/api/: moduleconfig.h
vc_project/: KaraulovLab.sln  KaraulovLab.vcxproj  KaraulovLab.vcxproj.filters  Source.def
